<resources>
    <string name="app_name">Ethonyte</string>
    <string name="state">Stan: </string>
    <string name="buzzer">Buzzer</string>
    <string name="measure1">Odległość 1:</string>
    <string name="measure2">Odległość 2:</string>
    <string name="ethonyte_settings_key">ethonytesettingsKey</string>
    <string name="settings_activity_title">Ustawienia</string>
    <string name="server_address_setting">Adres serwera Blynk</string>
    <string name="server_address_setting_summary">Nazwa hosta lub adres IP serwera</string>
    <string name="server_address_setting_alert_text">Wpisz adres serwera Blynk</string>
    <string name="server_port_setting">Port serwera Blynk</string>
    <string name="server_port_setting_summary">Port usług API serwera</string>
    <string name="server_port_setting_alert_text">Wpisz port serwera API Blynk</string>
    <string name="server_token_setting">Token Blynk</string>
    <string name="server_token_setting_summary">Unikalny token dla projektu</string>
    <string name="server_token_setting_alert_text">Wpisz token projektu Blynk</string>
    <string name="choose_measure_distance_alert">Wybierz odległość ostrzeżenia</string>
    <string name="ultrasonic_sensors">Czujniki ultradźwiękowe</string>
    <string name="ultrasonic_sensors_summary">Włącz lub wyłącz pomiary</string>
    <string name="photoresistor">Fotorezystor</string>
    <string name="photoresistor_summary">Dioda LED zmieni stan automatycznie</string>
    <string name="buzzer_summary">Dźwięk ostrzeżenia przy bliskiej odległości</string>
    <string name="buzzer_dist">Buzzer - dystans</string>
    <string name="buzzer_dist_summary">Dystans przed przeszkodą do ostrzeżenia</string>
    <string name="stopmeasure">Zatrzymuj przed zderzeniem</string>
    <string name="stopmeasure_summary">Wyłączaj silniki przy wykryciu przeszkody</string>
    <string name="stopmeasure_dist">Zatrzymuj przed zderzeniem - dystans</string>
    <string name="stopmeasure_dist_summary">Dystans przed przeszkodą do zatrzymania</string>
    <string name="title_activity_drawer_layout">DrawerLayout</string>
    <string name="magnetName">Elektro\nmagnes</string>
    <string name="less_requests_setting">Ograniczenia żądań</string>
    <string name="less_requests_setting_summary">Ogranicz wysyłanie danych do serwera</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="server_connection_error">Error getting request from server!</string>
    <string name="back_to_exit">Naciśnij wstecz dwa razy, aby zakończyć</string>
</resources>
